[package]
name = "polymix-update"
version = "0.1.0"
authors = ["Oleksii R <arodionow@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tiberius = { version = "0.5", features=["chrono", "tds73", "sql-browser-tokio"] }
tokio = { version = "1", features = ["macros", "rt", "net"] }
tokio-util = { version = "0.6", features = ["compat"] }

[profile.release]
opt-level="s"
lto=true