[package]
name = "polymix-update"
version = "0.1.0"
authors = ["Oleksii R <arodionow@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tiberius = { version = "0.12", features=["chrono", "tds73", "rust_decimal", "sql-browser-tokio"], default-features=false }
tokio = { version = "1", features = ["macros", "rt", "net"] }
tokio-util = { version = "0.7", features = ["compat"] }
glob = "0.3"
chrono = "0.4"
anyhow = "1"

[profile.release]
opt-level="s"
lto=true